--- a/html&css/homework-7/css/style.css
+++ b/html&css/homework-7/css/style.css
@@ -316,13 +316,13 @@ body {
 /* ------------------------------------------FOOTER------------------------------------------ */
 
 /* ----------------------------------Tablet----------------------------------------- */
-@media screen and (min-width: 501px) and (max-width: 1300px){
+@media screen and (min-width: 501px) and (max-width: 1000px){
   .p-1-box {
     width: 236px;
   }
 }
 
-@media screen and (min-width: 501px) and (max-width: 1300px){
+@media screen and (min-width: 501px) and (max-width: 1000px){
   .title-header {
     font-size: 52px;
     font-family: "Montserrat";
@@ -336,7 +336,7 @@ body {
 }
 
 
-@media screen and (min-width: 501px) and (max-width: 1300px){
+@media screen and (min-width: 501px) and (max-width: 1000px){
   
   .guys-s {
     display: flex;
@@ -344,7 +344,7 @@ body {
     flex-wrap: wrap;
   }
 }
-@media screen and (min-width: 501px) and (max-width: 1300px){
+@media screen and (min-width: 501px) and (max-width: 1000px){
   .container {
     max-width: 670px;
     margin: 0 auto;
@@ -352,7 +352,7 @@ body {
   }
 }
 
-@media screen and (min-width: 501px) and (max-width: 1300px){
+@media screen and (min-width: 501px) and (max-width: 1000px){
   .g-h-i-b-1{
     height: 32px;
     width: 32px;
@@ -367,7 +367,7 @@ body {
     top: 25%;
   }
 }
-@media screen and (min-width: 501px) and (max-width: 1300px){
+@media screen and (min-width: 501px) and (max-width: 1000px){
   .g-h-i-b-2{
     height: 32px;
     width: 32px;
@@ -382,7 +382,7 @@ body {
     top: 25%;
   }
 }
-@media screen and (min-width: 501px) and (max-width: 1300px){
+@media screen and (min-width: 501px) and (max-width: 1000px){
   .g-h-i-b-3{
     height: 32px;
     width: 32px;
@@ -397,7 +397,7 @@ body {
     top: 72%;
   }
 } 
-@media screen and (min-width: 501px) and (max-width: 1300px){
+@media screen and (min-width: 501px) and (max-width: 1000px){
   .g-h-i-b-4{
     height: 32px;
     width: 32px;
@@ -413,7 +413,7 @@ body {
   }
 }
 
-@media screen and (min-width: 501px) and (max-width: 1300px){
+@media screen and (min-width: 501px) and (max-width: 1000px){
     .box_3, .box_4{
         margin-top: 56px;
     }
@@ -600,5 +600,195 @@ body {
         margin-bottom: 60px;
     }
 }
+
+
+
+@media screen and (min-width: 320px) and (max-width: 500px){
+  .menu-item:not(:last-child) {
+    margin-right: 45px;
+  }
+}
+
+
 /* ----------------------------------End Mobile----------------------------------------- */
+/* ----------------------------------AppleWatch--------------------------------------------- */
+
+@media screen and (min-width: 60px) and (max-width: 150px){
+  .header{
+      padding-top: 28px;
+  }
+}
+@media screen and (min-width: 60px) and (max-width: 150px){
+
+.container {
+  max-width: 280px;
+  margin: 0 auto;
+  padding: 0;
+}
+}
+@media screen and (min-width: 60px) and (max-width: 150px){
+.title-header  {
+    font-size: 29px;
+     font-family: "Montserrat", sans-serif;
+     color: rgb(255, 255, 255);
+     font-weight: bold;
+     text-transform: uppercase;
+     line-height: 1.2;
+     text-align: center;
+  }
+}
+
+@media screen and (min-width: 60px) and (max-width: 150px){
+.p-1-box {
+  max-width: 224px;
+  margin-top: 25px;
+}
+.box_1{
+    margin-top: 13px;
+}
+}
+@media screen and (min-width: 60px) and (max-width: 150px){
+.guys-s {
+display: flex;
+justify-content: space-evenly;
+flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 60px) and (max-width: 150px){
+.title_3_header {
+    font-size: 18px;
+    color: #ffffff;
+    font-weight: 300;
+    font-family: "Roboto";
+    text-align: center;
+    margin-top: 9px;
+    /* padding-bottom: 154px; */
+   }
+}
+@media screen and (min-width: 60px) and (max-width: 150px){
+.navigation {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 60px) and (max-width: 150px){
+.logo {
+    font-size: 20px;
+    font-family: "Montserrat", sans-serif;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 1.2;
+    text-decoration: none;
+    text-align: center;
+    margin-top: 114px;
+    margin-bottom: 4px;
+  }
+}
+@media screen and (min-width: 60px) and (max-width: 150px){
+.menu {
+    color: #95e1d3;
+    display: flex;
+    align-items: center; 
+    /* margin-left: 600px; */
+    margin-left: 68px;
+  }
+}
+@media screen and (min-width: 60px) and (max-width: 150px){
+
+  .m-title-1{
+      font-size: 22px;
+      color: #333333;
+      font-weight: 700;
+      font-family: "Montserrat";
+      text-align: center;
+  }
+}
+
+@media screen and (min-width: 60px) and (max-width: 150px){
+.m-cheat {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+}
+@media screen and (min-width: 60px) and (max-width: 150px){
+.titles_of_header_and_btn {
+    margin-top: 40px;
+  }
+}
+@media screen and (min-width: 60px) and (max-width: 150px){
+.g-h-i-b-1{
+  height: 32px;
+  width: 32px;
+  background-image: url(../images/Ellipse\ 1.png);
+  background-repeat: no-repeat;
+  background-size: 32px 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 64%;
+  top: 13%;
+}
+}
+@media screen and (min-width: 60px) and (max-width: 150px){
+.g-h-i-b-2{
+  height: 32px;
+  width: 32px;
+  background-image: url(../images/Ellipse\ 2.png);
+  background-repeat: no-repeat;
+  background-size: 32px 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 64%;
+  top: 37%;
+}
+}
+@media screen and (min-width: 60px) and (max-width: 150px){
+.g-h-i-b-3{
+  height: 32px;
+  width: 32px;
+  background-image: url(../images/Ellipse\ 3.png);
+  background-repeat: no-repeat;
+  background-size: 32px 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 64%;
+  top: 61%;
+}
+}
+@media screen and (min-width: 60px) and (max-width: 150px){
+.g-h-i-b-4{
+  height: 32px;
+  width: 32px;
+  background-image: url(../images/Ellipse\ 4.png);
+  background-repeat: no-repeat;
+  background-size: 32px 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 64%;
+  top: 89%;
+}
+}
+@media screen and (min-width: 60px) and (max-width: 150px){
+.titles_of_header_and_btn {
+margin-top: 23px;
+padding-bottom: 138px;
+  }
+}
+@media screen and (min-width: 60px) and (max-width: 150px){
+  .btn_footer{
+      margin-top: 25px;
+      margin-bottom: 60px;
+  }
+} 
+
+/* ----------------------------------End AppleWatch----------------------------------------- */
 /* ----------------------------------End Media------------------------------------------ */
